Fix up ineffecient new Integer() constructs; remove unnecessary casts
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@660975 13f79535-47bb-0310-9956-ffa450edef68