@@ -255,9 +255,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ByteSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -268,7 +268,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 BasicHttpRequest get = null;
                 if (i < reqNo) {
                     get = new BasicHttpRequest("GET", "/?" + i);
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return get;
             }
@@ -280,7 +280,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ByteSequence list = (ByteSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 try {
                     HttpEntity entity = response.getEntity();
@@ -392,9 +392,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ByteSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -410,7 +410,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     NByteArrayEntity outgoing = new NByteArrayEntity(data);
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -422,7 +422,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ByteSequence list = (ByteSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 try {
                     HttpEntity entity = response.getEntity();
@@ -533,9 +533,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ByteSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -551,7 +551,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     outgoing.setChunked(true);
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -563,7 +563,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ByteSequence list = (ByteSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 try {
                     HttpEntity entity = response.getEntity();
@@ -827,9 +827,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ByteSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -844,7 +844,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     NByteArrayEntity outgoing = new NByteArrayEntity(data);
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -856,7 +856,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ByteSequence list = (ByteSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 try {
                     HttpEntity entity = response.getEntity();
@@ -970,9 +970,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ByteSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -988,7 +988,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     outgoing.setChunked(true);
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -1000,7 +1000,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ByteSequence list = (ByteSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 try {
                     HttpEntity entity = response.getEntity();
@@ -1122,9 +1122,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ResponseSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -1140,7 +1140,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                             EncodingUtils.getAsciiBytes("No content"));
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -1152,7 +1152,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ResponseSequence list = (ResponseSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 HttpEntity entity = response.getEntity();
                 if (entity != null) {
@@ -1264,9 +1264,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ResponseSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -1277,7 +1277,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 BasicHttpRequest request = null;
                 if (i < reqNo) {
                     request = new BasicHttpRequest(method[0], "/?" + i);
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return request;
             }
@@ -1289,7 +1289,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ResponseSequence list = (ResponseSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 list.addResponse(response);
                 requestCount.decrement();
@@ -1408,9 +1408,9 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("LIST", (ResponseSequence) attachment);
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("LIST", attachment);
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -1426,7 +1426,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     outgoing.setChunked(i % 2 == 0);
                     post.setEntity(outgoing);
 
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -1438,7 +1438,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                 ResponseSequence list = (ResponseSequence) context.getAttribute("LIST");
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 HttpEntity entity = response.getEntity();
                 if (entity != null) {
@@ -1539,8 +1539,8 @@ public class TestThrottlingNHttpHandlers extends TestCase {
         HttpRequestExecutionHandler requestExecutionHandler = new HttpRequestExecutionHandler() {
 
             public void initalizeContext(final HttpContext context, final Object attachment) {
-                context.setAttribute("REQ-COUNT", new Integer(0));
-                context.setAttribute("RES-COUNT", new Integer(0));
+                context.setAttribute("REQ-COUNT", Integer.valueOf(0));
+                context.setAttribute("RES-COUNT", Integer.valueOf(0));
             }
 
             public void finalizeContext(final HttpContext context) {
@@ -1558,7 +1558,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
                     NByteArrayEntity outgoing = new NByteArrayEntity(data);
                     outgoing.setChunked(i % 2 == 0);
                     post.setEntity(outgoing);
-                    context.setAttribute("REQ-COUNT", new Integer(i + 1));
+                    context.setAttribute("REQ-COUNT", Integer.valueOf(i + 1));
                 }
                 return post;
             }
@@ -1569,7 +1569,7 @@ public class TestThrottlingNHttpHandlers extends TestCase {
 
                 int i = ((Integer) context.getAttribute("RES-COUNT")).intValue();
                 i++;
-                context.setAttribute("RES-COUNT", new Integer(i));
+                context.setAttribute("RES-COUNT", Integer.valueOf(i));
 
                 HttpEntity entity = response.getEntity();
                 if (entity != null) {
